# llama.cpp

./: .dockerignore  .gitignore  Dockerfile  README.md  download_model.py  handler.py  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-shared-worker-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  (+3 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.runpod/: hub.json  tests.json
tts-voice-mixing/: README.md  test_voice_blend.py  voice_blend.py
tts-voice-mixing/patches/: handler.py  kokoro_engine.py  tests.json
worker-template/: Dockerfile  audio_utils.py  download_model.py  handler.py  pyproject.toml  requirements.txt  test_input.json
worker-template/.runpod/: hub.json
worker-template/tests/: conftest.py  test_audio_utils.py  test_download_model.py
worker-voice-clone/: Dockerfile  handler.py  pyproject.toml  requirements.txt  test_input.json  validate_reference.py  voice_clone.py
worker-voice-clone/.runpod/: hub.json
worker-voice-clone/tests/: conftest.py  test_handler.py  test_hub.py  test_validate_reference.py  test_voice_clone.py
worker-whisper/: Dockerfile  format_output.py  handler.py  pyproject.toml  requirements.txt  test_input.json  transcribe.py
worker-whisper/.runpod/: hub.json
worker-whisper/tests/: conftest.py  test_diarization.py  test_format_output.py  test_handler.py  test_hub.py  test_transcribe.py
(+24 files in other folders)
