[project]
name = "worker-template"
version = "0.1.0"
description = "Reusable RunPod audio worker template utilities"
requires-python = ">=3.10"
dependencies = [
    "runpod>=1.7.0",
    "huggingface-hub>=0.25.0",
    "requests>=2.31.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
